--- a/style.css
+++ b/style.css
@@ -16,18 +16,26 @@ body {
   height: 70px;
   padding-top: 20px;
 }
+article {
+  padding-left: 20px;
+}
 
 article h2 {
-  margin: 10px;
+  margin-top: 10px;
+  padding-bottom: 15px;
 }
 
 .author {
   color: grey;
   font-weight: bold;
-  margin: 10px;
+  /* margin: 10px; */
+  font-style: italic;
 }
 article p {
-  margin: 10px;
+  /* margin: 10px; */
   padding: 5px;
   background-color: #fff;
+}
+.text {
+  margin-bottom: 10px;
 }
