--- a/inline-block.css
+++ b/inline-block.css
@@ -11,6 +11,33 @@ body {
   border: 1px solid #000;
 }
 
+/* header */
+.logo {
+  text-decoration: none;
+  color: inherit;
+  font-size: 25px;
+  font-weight: bold;
+  margin-right: 20px;
+}
+.logo,
+nav {
+  display: inline-block;
+}
+.nav-ul {
+  list-style: none;
+  padding: 0;
+}
+.nav-li {
+  display: inline-block;
+}
+.nav-item {
+  text-decoration: none;
+  color: inherit;
+  border: 1px solid #000;
+  padding: 10px 20px;
+}
+/* header */
+
 .left {
   width: 45%;
   display: inline-block;
